--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,16 @@ body {
 html, body {
     height: 100%;
 }
+
+p, ol, ul, dl {
+    margin: .2em 0 .8em 0;
+}
+
+p {
+    padding: 0;
+    line-height: 140%;
+}
+
+h1,h2,h3,h4,h5 {
+    font-weight: bold;
+}
