--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,85 @@ body {
     background-color: #b3b3b3;
 }
 
+.topbar {
+    display: flex;
+    justify-content:     
+    space-between;
+    align-items: center;
+    padding: 10px;
+    background: whitesmoke;
+    top: 0;
+    z-index: 1000;
+    position: sticky;
+}
+
+.topbar nav {
+    display: flex;
+    padding: 20px;
+    gap: 20px;
+    background: rgb(245, 245, 245);
+}
+
+.topbar nav a {
+    padding: 10px 20px;
+    background-color: rgb(169, 239, 255);
+    text-decoration: none;
+    color: black;
+    border-radius: 5px;
+    box-shadow: 2px 3px 3px lightgrey;
+}
+
+.hero {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.hero-text {
+  position: absolute;
+  top: 30%;
+  left: 50%;         
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  text-shadow: 2px 2px 8px black;
+  text-align: center;
+}
+
+#hero {
+    background-color: aquamarine;
+}
+
+.cards {
+  margin-top: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+
+.card {
+  flex: 1 1 260px;
+  display: block;
+  padding: 14px 16px;
+  text-decoration: none;
+  color: #222;
+  background: #999999;
+  border: 1px solid #828282;
+  border-radius: 12px;
+  box-shadow: 0 3px 8px rgba(0,0,0,.08);
+  transition: transform .15s ease, box-shadow .15s ease;
+}
+
+.projects nav a {
+    padding: 10px 20px;
+    background-color: rgb(169, 239, 255);
+    text-decoration: none;
+    color: black;
+    border-radius: 5px;
+    box-shadow: 2px 3px 3px lightgrey;
+}
+
 html, body {
     height: 100%;
 }
@@ -18,3 +97,8 @@ p {
 h1,h2,h3,h4,h5 {
     font-weight: bold;
 }
+
+img {
+  width: 300px;
+}
+
